# Lintr

./: .gitattributes  .gitignore  Cargo.toml  README.md  opsx  opsx.bat  opsx.ps1
.github/: copilot-instructions.md
crates/lintr/: Cargo.toml
crates/lintr-config/: Cargo.toml
crates/lintr-config/src/: lib.rs
crates/lintr-core/: Cargo.toml
crates/lintr-core/src/: lib.rs
crates/lintr-parser/: Cargo.toml
crates/lintr-parser/src/: lib.rs
crates/lintr-rules/: Cargo.toml
crates/lintr-rules/src/: lib.rs
crates/lintr/src/: lib.rs
