[workspace]
resolver = "2"
members = [
    "crates/lintr-core",
    "crates/lintr-parser",
    "crates/lintr-rules",
    "crates/lintr-config",
    "crates/lintr",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
# Internal crates
lintr-core   = { path = "crates/lintr-core" }
lintr-parser = { path = "crates/lintr-parser" }
lintr-rules  = { path = "crates/lintr-rules" }
lintr-config = { path = "crates/lintr-config" }

# External dependencies
rustpython-parser = "0.4"
serde   = { version = "1", features = ["derive"] }
toml    = "0.8"
thiserror = "1"
