[package]
name    = "lintr-config"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Configuration loading for Lintr (lintr.toml / pyproject.toml)"

[dependencies]
lintr-core = { workspace = true }
serde      = { workspace = true }
toml       = { workspace = true }
thiserror  = { workspace = true }
