[package]
name    = "lintr"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Rust-based Python static analyzer — public library API"

[dependencies]
lintr-core   = { workspace = true }
lintr-parser = { workspace = true }
lintr-rules  = { workspace = true }
lintr-config = { workspace = true }
